// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography it should render description expected 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "color": "#4a4b21",
        "fontFamily": "Futura",
        "fontSize": 11,
      },
      undefined,
    ]
  }
>
  Description
</Text>
`;

exports[`Typography it should render header expected 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "color": "#4a4b21",
        "fontFamily": "Museo300",
        "fontSize": 20,
      },
      undefined,
    ]
  }
>
  Header
</Text>
`;

exports[`Typography it should render text body expected 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "color": "#4a4b21",
        "fontFamily": "Futura",
        "fontSize": 15,
      },
      undefined,
    ]
  }
>
  Text body
</Text>
`;

exports[`Typography it should render text body with props 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  inverted={true}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "color": "rgba(255,255,255,0.9)",
        "fontFamily": "Futura",
        "fontSize": 15,
      },
      undefined,
    ]
  }
>
  Text body
</Text>
`;

exports[`Typography it should render text body with props 2`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  color="purple"
  disabled={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "color": "purple",
        "fontFamily": "Futura",
        "fontSize": 15,
      },
      undefined,
    ]
  }
>
  Text body
</Text>
`;

exports[`Typography it should render text body with props 3`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  secondary={true}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "color": "#818180",
        "fontFamily": "Futura",
        "fontSize": 15,
      },
      undefined,
    ]
  }
>
  Text body
</Text>
`;

exports[`Typography it should render text body with props 4`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  highlight={true}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "color": "#e67543",
        "fontFamily": "Futura",
        "fontSize": 15,
      },
      undefined,
    ]
  }
>
  Text body
</Text>
`;

exports[`Typography it should render title expected 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "color": "#4a4b21",
        "fontFamily": "Museo300",
        "fontSize": 25,
        "textAlign": "left",
      },
      undefined,
    ]
  }
>
  Title
</Text>
`;
